Change Log for OpenXava project
===============================

- Fix: View.getCollectionSelectedValues() and CollectionBaseAction.getMapsSelectedValues() do not return all displayed values.
- Fix: Totals are not recalculated with element collections sometimes.

OpenXava 5.0 (2014-6-9)
-----------------------
- New look and feel.
- Login/​logout functionality.  	 
- Module navigation: Left searchable menu with all modules and top menu with recently used modules.   	 
- Collections editable at cell mode, like a spreadsheet, available for @ElementCollection. 
- All collection elements and the container entity are persisted at once, available for @ElementCollection.
- @ElementCollection of JPA 2 supported.
- New renderer engine to layout the user interface.
- Look and feel of date editor improved.
- Several reports in one PDF with the new JasperConcatReportBaseAction.
- @Collapsed annotation to initiate collections and references with the frame closed. Also allowed in XML components. 
- New NoCustomizeList controller for disabling list customization to a specific module.
- New stereotype FILE for attached files, it can store the files in DB or file system.
- The user can share a report of 'My reports' with all other users.
- New Addons project added to distribution to contain extended features outside of the OpenXava core.
- New InvoiceDemo project added to distribution.
- Groovy upgraded to 2.2.2.
- JasperReports upgraded to 5.5.1.
- DWR upgraded to 2.0.10.
- JSTL upgraded to 1.2 using Apache Standard Taglibs 1.2.1.
- JavaMail upgraded to 1.5.1.
- Upgrade of commons libraries to: beanutils 1.8.0, logging 1.1.1, digester 2.1, codec 1.9, fileupload 1.3.1, io 2.4, lang 2.6, validator 1.4.0.
- Upgrade to Servlet 2.5 and JSP 2.1.
- Added Commons Lang3 3.2.1 library.
- Tomcat 7 included in distribution.
- Dropped IE6, IE7 and IE8 support. 
- Using module.jsp to execute modules from browser is no longer supported.