@@ -1,5 +1,5 @@
 #HSQL Database Engine
-#Thu Jun 19 13:44:25 CEST 2014
+#Fri Jun 20 12:02:25 CEST 2014
 hsqldb.script_format=0
 runtime.gc_interval=0
 sql.enforce_strict_size=false
