@@ -1289,7 +1289,7 @@ INSERT INTO DELIVERY VALUES(22,NULL,1,666,'DELIVERY JUNIT 666',2004,2004,12,'',2
 INSERT INTO SHIPMENT VALUES('E',3,1,'UNO EXTERNO',NULL,NULL)
 INSERT INTO SHIPMENT VALUES('I',1,1,'UNO INTERNO',NULL,NULL)
 INSERT INTO SHIPMENT VALUES('I',2,5,'CINC','2006-12-25 11:33:00.0',NULL)
-INSERT INTO CLERK VALUES(1,1,1,'PEPE','16:05:00','16:05','437265617465642061742031363a3035')
+INSERT INTO CLERK VALUES(1,1,1,'PEPE','12:00:00','12:00','437265617465642061742031323a3030')
 INSERT INTO CLERK VALUES(1,1,2,'JUAN',NULL,NULL,NULL)
 INSERT INTO CLERK VALUES(1,2,1,'ANTONIO',NULL,NULL,NULL)
 INSERT INTO CLERK VALUES(1,2,2,'SOLEDAD',NULL,NULL,NULL)
